# Graphics

./: Build.bat  CMakeLists.txt  CMakeUserPresets.json  ConanInstall.bat  Config.h.in  conanfile.py  imgui.ini
app/: CMakeLists.txt  Main.cpp
include/common/: ConstExprMap.h
include/filesystem/: IFilesystem.h
include/game/: BackgroundCreation.h  Camera.h  GameObject.h  TextWindows.h
include/graphics/: IGraphicsApi.h
include/graphics_api/: BufferInfo.h  IGraphicsApi.h
include/io/: ICallbacks.h  ITextDisplay.h  ITimer.h  IWindow.h  IoFactory.h
include/logger/: Log.h
include/math/: MatrixAndVectorMath.h  Random.h
include/opengl_wrapper/: ShaderPipeline.h
include/renderer/: CreateShapes.h  IEntity.h  IndexBuffer.h  Instance.h  Renderer.h  Shader.h  ShaderPipeline.h  ShaderProgram.h  Shape.h  SubTexture.h  Texture.h  Vertex2DInfo.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
include/str_utils/: StringFormat.h
include/window_context/: IWindow.h  TimeStep.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/filesystem/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  IFilesystem.cpp
src/game/: BackgroundCreation.cpp  CMakeLists.txt  Camera.cpp  GameObject.cpp  TextWindows.cpp
src/graphics/: CMakeLists.txt  IGraphicsApi.cpp  OpenGlApi.cpp  OpenGlApi.h
src/graphics_api/: CMakeLists.txt  IGraphicsApi.cpp
src/graphics_api/opengl_wrapper/: CMakeLists.txt  GLDebug.cpp  OpenGlApi.cpp  OpenGlApi.h
src/graphics_api/opengl_wrapper/shaders/: shader.frag  shader.vert
src/io/: CMakeLists.txt  IoFactory.cpp
src/io/glfw_wrapper/: CMakeLists.txt  GlfwCallbacks.cpp  GlfwCallbacks.h  GlfwIoFactory.cpp  GlfwIoFactory.h  GlfwTextDisplay.cpp  GlfwTextDisplay.h  GlfwTimer.cpp  GlfwTimer.h  GlfwWindow.cpp  GlfwWindow.h
src/logger/: CMakeLists.txt
src/math/: CMakeLists.txt  Random.cpp
src/opengl_wrapper/: CMakeLists.txt  GLDebug.cpp  GLDebug.h  GLHandle.cpp  GLHandle.h  Shader.cpp  Shader.h  ShaderPipeline.cpp  ShaderProgram.cpp  ShaderProgram.h
src/opengl_wrapper/shaders/: shader.frag  shader.vert
src/renderer/: CMakeLists.txt  CreateShapes.cpp  IndexBuffer.cpp  Instance.cpp  Renderer.cpp  Shader.cpp  Shader.h  ShaderPipeline.cpp  ShaderProgram.cpp  ShaderProgram.h  SubTexture.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
src/str_utils/: CMakeLists.txt
src/window_context/: CMakeLists.txt  GlfwCallbacks.cpp  GlfwCallbacks.h  GlfwWindow.cpp  GlfwWindow.h  ICallbacks.h  IWindow.cpp  Time.cpp  TimeStep.cpp
